...
      decoration: BoxDecoration(
        color: AppColors.lightGrey10,
        borderRadius: BorderRadius.circular(BaseRadius.pill),
      ),
      child: Row(
        children: [
          _TabButton(label: 'Log in', index: 0, controller: controller),
          _TabButton(label: 'Sign up', index: 1, controller: controller),
        ],
      ),
    );
  }
}
...
