...
                    AppDimen.allPadding,
                    0,
                  ),
                  child: TextButton(
                    onPressed: controller.skip,
                    child: CustomText(
                      text: 'Skip',
                      color: AppColors.white.withOpacity(0.6),
                      fontSize: AppFontSize.verySmall,
                      fontWeight: FontWeight.w600,
                    ),
                  ),
                ),
...
